--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
 
         .navbar {
-            background-color: white;
+            background-color: black;
             font-size: 200;
 
 
