--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <style>
         .mynav {
-            background-image: url(1.jpg);
+            background-image: url(1.JPG);
             background-size: cover;
             height: 600px;
             width: 100%;
